--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,5 +16,5 @@ RUN git clone  https://github.com/pascalito007/vcenter-app.git
 # Build the project
 WORKDIR /work/vcenter-app/
 RUN mvn initialize; mvn clean install
-CMD ["/bin/bash"]
-#CMD ["java", "-jar", "./target/adconnect-0.0.1-SNAPSHOT.jar"]
+#CMD ["/bin/bash"]
+ENTRYPOINT ["java", "-jar", "./target/adconnect-0.0.1-SNAPSHOT.jar"]
